# tf_vitamin

./: README.md  pyproject.toml
tf_vitamin/callback/: sgdr.py  swa.py
tf_vitamin/competition/cassava_leaf_disease_classification/: config.py  dataset.py  parameter.py
tf_vitamin/competition/ranzcr_clip_catheter_line_classification/: config.py  dataset.py
tf_vitamin/competition/siim_isic_melanoma_classification/: augmentation.py  config.py  make_pseudo_label.py  tfrecord_converter.py
tf_vitamin/dataset/: dataset_coordinator.py  dataset_loader.py  tfrecord_converter.py  tfrecord_loader.py
tf_vitamin/entity/: image_config.py
tf_vitamin/losses/: loss.py
tf_vitamin/optimizers/: adabound.py
tf_vitamin/predictor/: predictor.py
tf_vitamin/utils/: kaggle_api.py  runtime.py
tf_vitamin/utils/notifier/: line_notifier.py  slack_notifier.py
