[tool.poetry]
name = "tf_vitamin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
tensorflow = "2.3.0"
pydantic = "^1.5.1"
kaggle = "^1.5.6"
slackclient = "^2.7.2"
efficientnet = "^1.1.0"
tensorflow_datasets = "^3.2.0"
opencv-python = "^4.3.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.4.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
